feat(distro): add WildFly 31 support (#4108)
* adjust standalone* and domain.xml files

https://github.com/camunda/camunda-bpm-platform/issues/4102